# springboot-initializr-CLI

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: build_tool.rs  deps.rs  docker.rs  doctor.rs  generate.rs  git.rs  info.rs  interactive.rs  main.rs  metadata.rs  project_deps.rs  search.rs  template.rs  update.rs  upgrade.rs  version.rs
src/client/: mod.rs  spring_initializr.rs
src/project/: build_file.rs  dependency_map.rs  detector.rs  mod.rs
test/: .gitignore  metadata.json  test.sh
